Fix sitemesh problem and beep version 2 to 3